<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".RegistryActivity">


    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRegistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_registry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgRegistry"
            android:layout_marginTop="15dp"
            android:text="@string/registryTitle"
            android:textColor="@color/primaryText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/registryTxtMessage"
            android:textColor="@color/secondaryText"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_below="@+id/linTop">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_email"
                app:helperText="@string/registryEdtHelper"
                app:counterEnabled="true"
                app:counterMaxLength="35"
                android:hint="Email">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtEmail"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:helperText="@string/registryEdtHelper"
                android:hint="Password">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/text_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:helperText="@string/registryEdtHelper"
                    android:hint="Telefono"
                    android:layout_weight="1"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtNumberPhone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:gravity="center"
                    android:id="@+id/spnCountries"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />


            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center">
                
                <CheckBox
                    android:id="@+id/checkEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:text="@string/checkRegistry1"
                    android:button="@drawable/custom_check_box"
                    android:background="@android:color/transparent"/>

                <CheckBox
                    android:visibility="gone"
                    android:id="@+id/checkMSJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:text="@string/checkRegistry2"
                    android:button="@drawable/custom_check_box"
                    android:background="@android:color/transparent"/>

            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSend"
                    android:textColor="@color/white"
                    android:text="@string/registryBtnSend"
                    android:textStyle="bold"
                    android:background="@drawable/custom_button"/>

                <ProgressBar
                    android:id="@+id/prgressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </FrameLayout>


        </LinearLayout>
    </LinearLayout>


</ScrollView>